<resources>
    <string name="app_name">Parental control</string>
    <string name="title_home">Manage rule</string>
    <string name="title_parents">Parent area</string>
    <string name="title_notify">Support area</string>
    <string name="parent_detail">Parent or guardian data</string>
    <string name="child_detail">Child data</string>
    <string name="review">Privacy policy</string>
    <string name="first_name">First name:</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name">Last name:</string>
    <string name="last_name_hint">Last name</string>
    <string name="email">E-mail:</string>
    <string name="email_hint">E-mail</string>
    <string name="updatebyemail">Do you choose to receive email and update notifications in the privacy policy?
        Please indicate below if you would like to receive them.</string>
    <string name="receiveupdate">Yes, I want to receive emails and notifications.</string>
    <string name="updateArea">Update notifications will be displayed at:
        \n\"Support area > Privacy policy updates\".</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="child_name">Enter the child\'s name for formal communication purposes only.</string>
    <string name="child_name_hint">First name</string>
    <string name="eula">By checking the box below, you agree that the user is a child under 13; that you are the parent/legal guardian and resposible for the child\'s privacy; that you claim ownership of the child\'s data that is collected through the mobile device; and that you are acting on behalf of the child to protect their data.</string>
    <string name="agree_check">I agree</string>
    <string name="back">Back</string>
    <string name="titlePolicy"><b>Toy privacy policy</b></string>
    <string name="monitor">Monitor for parents</string>
    <string name="txtRisk">Risk classification</string>
    <string name="descRisk">Classify child privacy risks to assist parents in their decision making in creating privacy rules. This classification can be performed based on statistical or machine learning techniques such as generative probabilistic models. Privacy risks can, for example, be listed by frequency of occurrence or degree of threat.
        \n\n Functionality not implemented.
   </string>
    <string name="contentLearn">Guide to learning</string>
    <string name="descContentLearn">Access here materials with guidelines on child privacy risks as well as content to better understand the use of the tool.
     \n \n New materials frequently added.</string>
    <string name="column_1">Rule name</string>
    <string name="column_2">Mobile service</string>
    <string name="column_3">Functions</string>
</resources>