<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/ScrollViewParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ParentProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/parent_detail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/border_effect"
            android:elevation="3dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/parent_detail"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3333" />

        <TextView
            android:id="@+id/child_detail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/border_beforeffect"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/child_detail"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/parent_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3333" />

        <TextView
            android:id="@+id/review"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/border_beforeffect"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/child_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3333" />

        <!-- Container -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideParent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/first_name"
            app:layout_constraintEnd_toStartOf="@+id/guideParent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/child_detail" />

        <EditText
            android:id="@+id/first_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/first_name_hint"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/guideParent"
            app:layout_constraintTop_toBottomOf="@+id/child_detail" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/last_name"
            app:layout_constraintEnd_toStartOf="@+id/guideParent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <EditText
            android:id="@+id/last_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:autofillHints="@string/last_name_hint"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/guideParent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_edit" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/email"
            app:layout_constraintEnd_toStartOf="@+id/guideParent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />


        <EditText
            android:id="@+id/email_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:autofillHints="@string/email_hint"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toEndOf="@+id/guideParent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_edit" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="fill_horizontal"
            android:text="@string/updatebyemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit" />

        <TextView
            android:id="@+id/textMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/updateArea"
            app:layout_constraintBottom_toTopOf="@+id/guidelineParent2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxParent" />/>

        <CheckBox
            android:id="@+id/checkBoxParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/receiveupdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineParent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_cancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineParent2" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_next"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineParent2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>