<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/ScrollViewChild"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChildProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/parent_detail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/border_effect"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/parent_detail"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3333" />

        <TextView
            android:id="@+id/child_detail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/border_effect"
            android:elevation="3dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/child_detail"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@+id/parent_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3333" />

        <TextView
            android:id="@+id/review"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/border_beforeffect"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toEndOf="@id/child_detail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3333" />

        <!-- -->

        <TextView
            android:id="@+id/childName_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/child_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_detail" />

        <EditText
            android:id="@+id/childNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/child_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/childName_text" />

        <TextView
            android:id="@+id/eulaText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="fill_horizontal"
            android:text="@string/eula"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/childNameEdit" />

        <CheckBox
            android:id="@+id/checkBoxChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/agree_check"
            app:layout_constraintBottom_toTopOf="@+id/guidelineChild"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eulaText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.86" />

        <Button
            android:id="@+id/btBackChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_cancel"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineChild" />

        <Button
            android:id="@+id/btNextChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_next"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineChild" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>