<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_column="0"
            android:padding="5dp"
            android:layout_span="3"
            android:text="@string/column_1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="left"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_column="1"
            android:layout_span="4"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/column_2"
            android:textColor="@color/white"
            android:gravity="left"
            android:textStyle="bold" />

        <TextView
            android:layout_column="2"
            android:padding="5dp"
            android:layout_span="2"
            android:text="@string/column_3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="right"
            android:background="@color/colorPrimary"/>
    </TableRow>

</TableLayout>